--- a/style.css
+++ b/style.css
@@ -221,14 +221,14 @@ body.dark-mode .service-card {
     border: 1px solid #eee;
     border-radius: 8px;
     padding: 20px;
-     height: 150px;
-    width: 300px;
+     width: 30%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
 }
 
 .project-card img {
-    max-width: 100%;
+    height: 150px;
+    width: 300px;
     border-radius: 8px;
     margin-bottom: 12px;
 }
@@ -465,4 +465,5 @@ body.dark-mode .hamburger {
     background: #1e1e1e;
   }
 }
+
 
